sp1-custom-table/src/app/shared/components/table/table.component.scss
.table-filter-container {
  padding: .625em 0;
  display: flex;
  flex-flow: row wrap;
  align-items: center;
  overflow: hidden;

  .table-search-bar {
    width: 600px;
    min-width: 300px;
  }

  .table-non-search-bar-container {
    display: flex;
    flex-flow: row wrap;
    align-items: center;
    flex: auto;
    justify-content: flex-end;
  }

  .multiple-selection-container {
    display: flex;
    align-items: center;
    gap: .25em;
  }

  .auto-refresh-toggle {
    padding: 0 .25em;
  }
}

.table-container {
  margin: 0 auto;
  overflow: auto;

  &.is-loading {
    :not(:first-child) {
      opacity: 55%;
    }
  }
}

table {
  width: 100%;

  th,
  td {
    white-space: nowrap;
  }

  tr {
    &.mat-mdc-no-data-row {
      white-space: nowrap;
    }
  }
}

.mat-mdc-header-row {
  height: 26px;
}

.mat-mdc-row {
  height: 36px;

  &.showActions {
    height: 52px;
  }
}

.mat-column-actions,
.mat-column-actions-filter {
  border-left: 1px solid #ccc;
}

.mat-mdc-form-field {
  font-size: 14px;
  width: 100%;
}

.mdc-button {
  &.template-cell-button {
    border-radius: 6px !important;
  }
}

::placeholder {
  font-style: italic;
}

